# hgraph_monitor

./: CHANGELOG.md  ISSUES.md  README.md  ROADMAP.md  pyproject.toml
docs/: concepts.md  tasks.md
src/hgraph_monitor/: monitor_app.py
src/hgraph_monitor/client/: monitor_cli.py  task_client.py
src/hgraph_monitor/configuration/: crud.py  item_description.py
src/hgraph_monitor/tasks/: task_api.py  task_plugin.py
tests/configuration/: test_item_description.py
tests/tasks/: test_task_api.py
