[tool.poetry]
name = "hgraph_monitor"
version = "0.0.1"
description = "A simple monitoring app to show how to make use of hgraph and it's adaptors."
readme = "README.md"
license = "MIT"
authors = [
    "Howard Henson <howard@henson.me.uk>"
]
keywords = [
    "reactive", "graph", "fpg", "forward propogating graph",
    "time series", "functional reactive programming",
    "frp", "functional", "time-series", "monitoring"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [
    { include = "hgraph_monitor", from = "src" },
]

[tool.poetry.dependencies]
    python = ">=3.11"
    hgraph = { version = ">=0.3.8", extras = ["web"]}

[tool.poetry.urls]
Homepage = "https://github.com/hhenson/hgraph_monitor"
Documentation = "https://github.com/hhenson/hgraph_monitor/blob/main/docs/index.md"
Repository = "https://github.com/hhenson/hgraph_monitor.git"
Issues = "https://github.com/hhenson/hgraph_monitor/blob/main/ISSUES.md"
Changelog = "https://github.com/hhenson/hgraph_monitor/blob/main/CHANGELOG.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "*"
mypy = "*"
pytest-cov = "*"
coverage = "*"
pytest-xdist = "*"
fire = "*"

# Configure pytest
[tool.pytest.ini_options]
minversion = "7.4.3"
addopts = "-n auto -ra -q --dist=loadscope" # " --cov=hgraph --cov-report=term-missing --cov-report=xml"
testpaths = [
    "tests",
]
markers = [
    "serial: mark test to run serially (not in parallel with xdist)",
]

# Configure coverage
[tool.coverage.run]
source_pkgs = ["hgraph_monitor",]
branch = true
parallel = true
omit = [
]

[tool.coverage.paths]
hg = ["src/hgraph_monitor",]
tests = ["tests",]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py311']
unstable = true
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/foo.py    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''

[tool.mypy]
files = ["src",]
